# openai-realtime-demo

./: .env.example  .gitignore  CLAUDE.md  PLAN-10.md  PLAN-11.md  PLAN-12.md  PLAN-2.md  PLAN-3.md  PLAN-4.md  PLAN-5.md  PLAN-6.md  PLAN-7.md  PLAN-8.md  PLAN-9.md  PLAN.md  README.md  REFLECTION.md  docker-compose.yml
.github/workflows/: ci.yml
clickhouse/: listen.xml
db/migrations/: 001_shared_schema.sql  002_version_b_jobs.sql  003_session_report.sql
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/livekit-token/: route.ts
frontend/app/student/: page.tsx
frontend/app/teacher/: page.tsx
frontend/components/demo/: FlowVisualizer.tsx  SuggestedQuestions.tsx  TradeoffPanel.tsx
frontend/components/landing/: ArchitectureCompare.tsx  VersionSelector.tsx
frontend/components/livekit/: StudentRoom.tsx
frontend/components/openai/: RealtimeSession.tsx  TeacherObserver.tsx
frontend/components/shared/: EscalationBanner.tsx  SubjectBadge.tsx  TranscriptPanel.tsx
frontend/hooks/: useCsrfToken.ts  useEscalationWatch.ts  useTrace.ts  useVersion.ts
frontend/hooks/livekit/: useTranscript.ts
frontend/hooks/openai/: useBackendTts.ts  useRealtimeSession.ts
frontend/tests/e2e/: flow.spec.ts  integration.spec.ts  landing.spec.ts  mobile.spec.ts  observability.spec.ts  pipeline.spec.ts  teacher.spec.ts  tradeoff.spec.ts
scripts/: run_migrations.sh
shared/guardrail/: models.py  pyproject.toml  service.py
shared/guardrail/tests/: test_service.py
shared/guardrail/tests/integration/: conftest.py  test_guardrail_live.py
shared/observability/: langfuse.py  pyproject.toml
shared/observability/tests/: test_langfuse.py
shared/specialists/: classifier.py  english.py  history.py  math.py  pyproject.toml
shared/specialists/tests/: test_classifier.py  test_specialists.py
shared/specialists/tests/integration/: conftest.py  test_specialists_live.py
supabase/: kong.yml
version-a/: livekit.yaml
version-a/agent/: Dockerfile  main.py  pyproject.toml
version-a/agent/agents/: base.py  english_agent.py  history_agent.py  math_agent.py  orchestrator.py
version-a/agent/models/: session_state.py
version-a/agent/services/: human_escalation.py  transcript_store.py
version-a/agent/tests/: test_agent_constants.py  test_english_agent.py  test_guarded_agent.py  test_history_agent.py  test_math_agent.py  test_routing.py  test_services.py  test_session_state.py
version-a/agent/tools/: routing.py
version-b/backend/: Dockerfile  main.py  pyproject.toml
version-b/backend/models/: job.py  session_state.py
version-b/backend/routers/: csrf.py  events.py  orchestrator.py  session.py  teacher.py  tts.py
version-b/backend/services/: human_escalation.py  job_store.py  transcript_store.py
version-b/backend/tests/: conftest.py  test_csrf.py  test_events.py  test_human_escalation.py  test_job_model.py  test_job_store.py  test_orchestrator_audit.py  test_orchestrator_route.py  test_rate_limiting.py  test_session_route.py  test_session_state.py  test_teacher_route.py  test_tts_route.py
version-b/backend/tests/integration/: conftest.py  test_orchestrator_live.py
