[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrail"
version = "0.1.0"
description = "Content moderation guardrail for AI tutoring"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
