[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observability"
version = "0.1.0"
description = "OTEL + Langfuse observability for AI tutoring"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build]
exclude = ["tests/**"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
