[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specialists"
version = "0.1.0"
description = "Subject matter specialists for AI tutoring"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0", "pytest-mock>=3.0.0", "pytest-timeout>=2.3.0"]

[tool.hatch.build]
exclude = ["tests/**"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require live API keys",
]
