[project]
name = "version-b-backend"
version = "0.1.0"
description = "Version B FastAPI backend — OpenAI Realtime Direct architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.51.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    # OTEL
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    # Note: guardrail, specialists, observability are shared packages installed
    # separately (e.g. `pip install -e ../../shared/guardrail` for local dev,
    # or by Dockerfile explicitly before installing this package).
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "pytest-timeout>=2.3.0",
    # Integration tests call shared specialists (which import anthropic/openai)
    "anthropic>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require live API keys",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
